# Nemo-apps

./: .dockerignore  .env.example  .gitignore  Account-project-user-adding-Nemo.xlsx  Caddyfile  Dockerfile  Invoice-app.py  README.md  User_batch_import_app.py  build_usage_cap_report.py  docker-compose.yml  duplicate_full_names.csv  duplicate_last_names.csv  excel_invoice_pdf_converter.py  main_app.py  nemo_invoice_generator_with_pdf.py  nemo_user_importer.py  pyproject.toml  requirements.txt
nemo_tools_app_v2/: .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  pyproject.toml
nemo_tools_app_v2/docs/: ARCHITECTURE.md  DEVELOPMENT.md  MIGRATION.md
nemo_tools_app_v2/src/nemo_app/: __init__.py  config.py
nemo_tools_app_v2/src/nemo_app/billing/: __init__.py  adjustments.py  caps.py  constants.py  invoice_model.py  prepare.py  text.py
nemo_tools_app_v2/src/nemo_app/dashboard/: __init__.py  service.py
nemo_tools_app_v2/src/nemo_app/imports/: __init__.py  user_importer.py
nemo_tools_app_v2/src/nemo_app/invoices/: __init__.py  excel_parser.py  excel_renderer.py  excel_styles.py  pdf_renderer.py  service.py
nemo_tools_app_v2/src/nemo_app/jobs/: __init__.py  cleanup.py  handlers.py  models.py  store.py  worker.py
nemo_tools_app_v2/src/nemo_app/nemo/: __init__.py  cache.py  (+2 more)
nemo_tools_app_v2/tests/: fixtures.py  test_billing_characterization.py  test_importer.py  test_invoice_characterization.py  test_job_store.py  test_nemo_client.py  test_reports.py  test_services.py  test_web_smoke.py  test_worker_integration.py
(+40 files in other folders)
